# GPU-Specialization-Capstone-Project

./: .gitignore  CMakeLists.txt  Readme.md  YoloV8.hpp  YoloV8Libtorch.hpp  YoloV8ONNX.hpp  YoloV8TRT.hpp  common.hpp  main.cpp
include/: common.hpp  hwinfo.hpp
src/: YoloV8.hpp  YoloV8Libtorch.hpp  YoloV8ONNX.hpp  labels.hpp
